# google-speech-to-text

./: .gitignore  LICENSE  README.md  pyproject.toml
google_speech_to_text/: __init__.py  cli.py  client.py
